# libgnl

./: .gitignore  CMakeLists.txt  Makefile  minimake.sh
apps/: CMakeLists.txt  torture-gnl.c
inc/: get_next_line.h  gnl.h
scripts/: gen-CMakeLists.sh
src/: CMakeLists.txt  get_next_line.c  get_next_line_utils.c
tests/: CMakeLists.txt
tests/src/: get_next_line-test.cpp
